PZ-269 | Modularise PearlZip boot up process to make modifications easier
+ TestArchiveTestFX related changes to correct issues

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>